--- a/wiki/StyleGuideCpp.wiki
+++ b/wiki/StyleGuideCpp.wiki
@@ -5,9 +5,17 @@
 Add your content here.
 
 
-= Details =
+== Headers ==
+Any program whose source code is more than one file *must* make use of header files. Under no circumstances are you ever to import a cpp file.
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+== Comments ==
+
+Every function must have a function header comment.
+Every class must have a class header comment.
+
+In line comments should be used to describe behaviour of blocks of code.
+
+== White space ==
+All files must be properly indented. 
+
+Blocks of code should have one line of white space separating them.
