Edited wiki page SensorDocumentationPages through web user interface.

--- a/wiki/SensorDocumentationPages.wiki
+++ b/wiki/SensorDocumentationPages.wiki
@@ -2,5 +2,10 @@
 
 = Introduction =
 
-Sharp (old) IR Sensors
+(old) IR Sensors: 
 http://sharp-world.com/products/device/lineup/data/pdf/datasheet/gp2y0a02_e.pdf
+
+(new) IR Sensors: 
+http://sharp-world.com/products/device/lineup/data/pdf/datasheet/gp2y0a51sk_e.pdf
+
+Dust Sensors: https://www.sparkfun.com/datasheets/Sensors/gp2y1010au_e.pdf
